add decord and dependabot

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,39 @@
 ## Required
-numpy
-scipy
+h5py
+decord
+ipywidgets
 matplotlib
+natsort
 numba
+numpy
+opencv-contrib-python
+pandas
+paramiko
+PyYAML
+pytest
 scikit-learn
 tqdm
-h5py
-opencv-contrib-python
 sparse
-natsort
-paramiko
-pandas
-pytest
-PyYAML
+scipy
 torch
 torchvision
 torchaudio
 
 ## Optional / Advanced
 tables
-
 opt-einsum
 rolling-quantiles
-
 pulp
-
 spconv
 torch-sparse
-
 av
-decord
-
 pynwb
-
 sendgrid
-
 pycuda
 cuml
 cupy
 cudf
-
 scanimage-tiff-reader
-
 jupyter
-
 PyWavelets
-
 mat73
