--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,8 @@ jobs:
           # "3.12",
         ]
         extra: [
-          all,
-          all_latest,
+          " ",
+          advanced,
         ]
         install-level: [
           system,
