--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,8 @@ jobs:
           # "3.12",
         ]
         extra: [
-          " ",
-          "[advanced]",
+          all,
+          all_latest,
         ]
         install-level: [
           system,
@@ -125,11 +125,11 @@ jobs:
       if: matrix.install-level == 'system'
       run: |
         ## install dependencies with optional extras
-        pip install -v -e .${{ matrix.extra }}
+        pip install -v -e .[${{ matrix.extra }}]
     - name: Install package with pip dependencies -- user-level
       if: matrix.install-level == 'user'
       run: |
-        pip install -v -e .${{ matrix.extra }} --user
+        pip install -v -e .[${{ matrix.extra }}] --user
 
 
     - name: Check installed packages
