Update dependencies and prepare for cv2Headless mode

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,8 +47,8 @@ jobs:
           # "3.12",
         ]
         extra: [
-          core,
-          core_latest,
+          core_cv2Headless,
+          core_latest_cv2Headless,
         ]
         install-level: [
           system,
