--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           windows-2019,
           # # macos-latest,
           macos-12,
-          macos-11.0,
+          # macos-11.0,  ## eva-decord fails on macos-11
           # macos-10.15,
         ]
         python-version: [ 
