--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,13 +29,13 @@ jobs:
       fail-fast: false
       matrix:
         platform: [
-          # ubuntu-latest,
+          ubuntu-latest,
           ubuntu-22.04,
-          ubuntu-20.04,
-          # # windows-latest,
+          # ubuntu-20.04,
+          # windows-latest,
           windows-2022,
           windows-2019,
-          # # macos-latest,
+          macos-latest,
           macos-14,
           # macos-11.0,  ## eva-decord fails on macos-11
           # macos-10.15,
@@ -44,7 +44,8 @@ jobs:
           # "3.9",
           # "3.10",
           "3.11",
-          # "3.12",
+          "3.12",
+          "3.13",
         ]
         extra: [
           core_cv2Headless,
